--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,22 @@
+* {
+  box-sizing: border-box;
+}
 body{
     margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(242, 227, 255) ;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+main {
+    flex: 1;
 }
 
 /*ENCABEZADO*/
 
  /* barra de navegacion */ 
+ 
 .navbar {
     display: flex;
     align-items: center;
@@ -149,6 +159,23 @@ body{
   color: inherit;
 }
 
+
+/*contenido modulos*/
+.recuadro-info {
+  width: 50vw; 
+  height: 50vh; 
+  margin: 50px auto;
+  background-color: #f0e5f7;
+  color: #3e003c;
+  border: 2px dashed #a64ca6;
+  padding: 40px;
+  text-align: center;
+  font-size: 24px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  
+}
+
 /*PIE DE PAGINA*/
 
 .footer{
@@ -156,31 +183,27 @@ body{
     color: rgb(255, 255, 255);
     padding: 20px;
     font-size: 14px;
+    width: 100%;
+    margin-top: auto;
 }
 .footer-container {
-  max-width: 1000px;
   margin: 0 auto;
-  padding: 0 20px;    
+  padding: 0 20px;
+
+  
 }
-.footer-content{
+.footer-content {
     display: flex;
-    justify-content: center;
-    gap:50px;
+    justify-content: space-around;
+    gap:20px;
     flex-wrap: wrap;
+    max-width: 1500px;
+    
 }
 .footer-info {
     flex: 1;
     text-align: left;
     padding-right: 30px;
-}
-
-/*iconos*/
-.icono-imagen {
-  width: 30px;
-  height: 30px;
-  margin: 0 5px;
-  vertical-align: middle;
- 
 }
 .footer-contact h4{
   text-align: center;
@@ -195,6 +218,13 @@ body{
   
 }
 
-.footer-contact a {
-  text-decoration: none;
+/*iconos*/
+.icono-imagen {
+  width: 40px;
+  height: 40px;
+  margin: 0 5px;
+  vertical-align: middle;
+ 
 }
+
+
