--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 * {
   box-sizing: border-box;
 }
-body{
+html, body {
     margin: 0;
+    padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(242, 227, 255) ;
     min-height: 100vh;
@@ -185,26 +186,29 @@ main {
     font-size: 14px;
     width: 100%;
     margin-top: auto;
+    display: flex;
+    justify-content: center;
 }
 .footer-container {
-  margin: 0 auto;
+  max-width: 1100px;
   padding: 0 20px;
-
-  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+    
 }
 .footer-content {
     display: flex;
-    justify-content: space-around;
-    gap:20px;
+    justify-content: center;
+    gap:30px;
     flex-wrap: wrap;
-    max-width: 1500px;
+    width: 100%;
+
     
 }
-.footer-info {
-    flex: 1;
-    text-align: left;
-    padding-right: 30px;
-}
+
 .footer-contact h4{
   text-align: center;
 
@@ -212,10 +216,10 @@ main {
 .footer-contact ul {
   list-style: none;
   padding: 0;
-  margin: 10px;
+  margin: 20px;
   display: flex;
-  gap: 20px;
-  
+  gap: 30px;
+  justify-content: center;
 }
 
 /*iconos*/
